# rs-books

./: .gitignore  Cargo.toml  docker-compose.yml
books_api/: Cargo.toml
books_api/src/: main.rs
books_api/src/feature/book/: book_repo.rs  book_service.rs  mod.rs  ports.rs  rest_controller.rs
books_api/src/infrastructure/: postgres.rs
books_web/: Cargo.toml  index.html
books_web/src/: main.rs
migrations/: 20220702063609_create_books.up.sql  20220702122900_alter_books.down.sql  20220702122900_alter_books.up.sql  20220702125315_timestamp_trigger_func.down.sql  20220702125315_timestamp_trigger_func.up.sql  20220702125423_books_updated_at_trigger.down.sql  20220702125423_books_updated_at_trigger.up.sql
