[package]
name = "books_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
url = { version = "2", features = ["serde"] }
sqlx = { version = "0.5", features = ["runtime-actix-native-tls", "postgres", "uuid", "time"] }
actix-web = "4"
dotenv = "0.15"
async-trait = "0.1.56"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
chrono = "0.4.19"