[package]
name = "books_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
reqwasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
url = { version = "2", features = ["serde"] }
getrandom = { version = "0.2", features = ["js"] }